spacing issue popped up

--- a/browser/scss/shapes/main.scss
+++ b/browser/scss/shapes/main.scss
@@ -98,6 +98,7 @@ h3.text-box {
 	.date{
 		position:absolute;
 		bottom: 0;
+		left: 0;
 		width:100%;
 		p{
 			text-align:center;
